# roboagents

./: .travis.yml  CMakeLists.txt  README.md  bitbucket-pipelines.yml  doxyfile  prompt.txt
include/: robot.h  world.h
src/: main.cpp  robot.cpp  world.cpp
test/: mutex_test.cc  prod_cons_test.cc  rand_test.cc  thread_test.cc
